add jupyter noteboox docs/rsgc_jupyter.ipynb

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -75,33 +75,33 @@
     "unzip_necessary_files_and_libraries()\n",
     "\n",
     "from timeit import default_timer as timer\n",
-    "from Parser import read_startcompounds as rtsc\n",
-    "from Parser import read_targets as rt\n",
-    "from Parser import generate_output as go\n",
-    "from Parser import structure_similarity as ss\n",
-    "from Parser import generate_html as gh\n",
-    "from Visualization_chemdraw import reaction_files as rf\n",
-    "from Visualization_graphviz import SP_Graph_dot as spgd\n",
-    "from ShortestPath import extractinfo as ei\n",
-    "from ShortestPath import constraints as co\n",
-    "from ShortestPath import integerprogram_pulp as ip_pulp\n",
-    "from ShortestPath.rankingpaths_seperation import ranking_pathways as rp\n",
-    "from Database import initialize_database as init_db\n",
-    "from Database import build_modelseed as bms\n",
-    "from Database import build_metacyc_db as bmcdb\n",
-    "from Database import build_user_rxns_db as burdb\n",
-    "from Database import build_ATLAS_db as batlasdb\n",
-    "from Database import build_MINE_db as bminedb\n",
-    "from Database import build_KEGG_db as bkeggdb\n",
-    "from Database import build_SPRESI_db as bspresidb\n",
-    "from Database import query as Q\n",
-    "from Database import remove_duplicate_cpds as rdc\n",
-    "from FBA import build_model as bm\n",
-    "from FBA import optimize_target as ot\n",
-    "from FBA import compare_results as cr\n",
-    "from FBA import retrieve_producable_mets as rpm\n",
-    "from FBA import compareKO_results as crko\n",
-    "from GeneCompatibility.gc import gc_main as gc"
+    "from rsgc.Parser import read_startcompounds as rtsc\n",
+    "from rsgc.Parser import read_targets as rt\n",
+    "from rsgc.Parser import generate_output as go\n",
+    "from rsgc.Parser import structure_similarity as ss\n",
+    "from rsgc.Parser import generate_html as gh\n",
+    "from rsgc.Visualization_chemdraw import reaction_files as rf\n",
+    "from rsgc.Visualization_graphviz import SP_Graph_dot as spgd\n",
+    "from rsgc.ShortestPath import extractinfo as ei\n",
+    "from rsgc.ShortestPath import constraints as co\n",
+    "from rsgc.ShortestPath import integerprogram_pulp as ip_pulp\n",
+    "from rsgc.ShortestPath.rankingpaths_seperation import ranking_pathways as rp\n",
+    "from rsgc.Database import initialize_database as init_db\n",
+    "from rsgc.Database import build_modelseed as bms\n",
+    "from rsgc.Database import build_metacyc_db as bmcdb\n",
+    "from rsgc.Database import build_user_rxns_db as burdb\n",
+    "from rsgc.Database import build_ATLAS_db as batlasdb\n",
+    "from rsgc.Database import build_MINE_db as bminedb\n",
+    "from rsgc.Database import build_KEGG_db as bkeggdb\n",
+    "from rsgc.Database import build_SPRESI_db as bspresidb\n",
+    "from rsgc.Database import query as Q\n",
+    "from rsgc.Database import remove_duplicate_cpds as rdc\n",
+    "from rsgc.FBA import build_model as bm\n",
+    "from rsgc.FBA import optimize_target as ot\n",
+    "from rsgc.FBA import compare_results as cr\n",
+    "from rsgc.FBA import retrieve_producable_mets as rpm\n",
+    "from rsgc.FBA import compareKO_results as crko\n",
+    "from rsgc.GeneCompatibility.gc import gc_main as gc"
    ]
   },
   {
@@ -723,78 +723,48 @@
     "            output.output_compound_natively_present_in_target_organism(target_info)\n",
     "\n",
     "        else:\n",
-    "\n",
     "            optimal_pathways = IP.run_glpk(LP, incpds_active, inrxns_active, target_info[0],\n",
-    "                                        multiplesolutions=multiple_solutions)\n",
-    "\n",
+    "                                           multiplesolutions=multiple_solutions)\n",
     "            if optimal_pathways:                    \n",
+    "                uniq_externalrxns = []\n",
+    "                for path in optimal_pathways:\n",
+    "                    path_org = []\n",
+    "                    for rxn in path:\n",
+    "                        rxn = re.sub('_F$', '', rxn)\n",
+    "                        rxn = re.sub('_R$', '', rxn)\n",
+    "                        path_org.append(rxn)\n",
+    "                    uniq_externalrxns.append(list(set(path_org) - set(inrxns_active)))\n",
+    "\n",
     "                ex_info = ei.Extract_Information(optimal_pathways, incpds_active, inrxns_active, DB)\n",
-    "                R = rf.ReactionFiles(output_path, DB, ex_info.temp_rxns,\n",
-    "                                    target_info[0], target_info[2], incpds_active,\n",
-    "                                    figures_chemdraw)\n",
-    "\n",
-    "                if rankpathways_boilingpoint:\n",
-    "                    RP = rp.RankPath(ex_info, R.ordered_paths, incpds_active, target_info[0],\n",
-    "                                    LPchem, evaluate_reactions, CRV, 'bp')\n",
-    "                    ex_info = RP.BP.ex_info\n",
-    "                    R = rf.ReactionFiles(output_path, DB, ex_info.temp_rxns,\n",
-    "                                        target_info[0], target_info[2], incpds_active, figures_chemdraw)                    \n",
-    "                    SP = RP.BP\n",
-    "                    ranktype = 'bp'\n",
-    "\n",
-    "                if rankpathways_logP:\n",
-    "                    RPL = rp.RankPath(ex_info, R.ordered_paths, incpds_active, target_info[0],\n",
-    "                                    LPchem, evaluate_reactions, CRV, 'logP', solvent_pref=rankpathways_logP_solvent)\n",
-    "\n",
-    "                    ex_info = RPL.LOGP.ex_info\n",
-    "                    R = rf.ReactionFiles(output_path, DB, ex_info.temp_rxns,\n",
-    "                                        target_info[0], target_info[2], incpds_active, figures_chemdraw)\n",
-    "                    SP = RPL.LOGP\n",
-    "                    ranktype = 'logP'\n",
-    "\n",
     "                output.output_shortest_paths(target_info, ex_info.temp_rxns)\n",
-    "                output.output_raw_solutions(target_info[0], target_info[2], R.ordered_paths,\n",
-    "                                            ex_info.temp_rxns, ex_info.temp_external, incpds_active, SP)\n",
     "\n",
+    "                R = rf.ReactionFiles(args.output_path, DB, ex_info.temp_rxns,\n",
+    "                                 target_info[0], target_info[2], incpds_active)\n",
+    "\n",
+    "                output.output_raw_solutions(target_info[0], target_info[2], R.ordered_paths,\n",
+    "                                            ex_info.temp_rxns, ex_info.temp_external, incpds_active)\n",
     "\n",
     "                if flux_balance_analysis:\n",
-    "\n",
     "                    opt_fba = run_flux_balance_analysis(target_info, ex_info,\n",
     "                                                        incpds_active, inrxns_active,\n",
-    "                                                        media_for_FBA, knockouts,\n",
-    "                                                        output, DB, SP, verbose)\n",
+    "                                                        args.media_for_FBA, knockouts,\n",
+    "                                                        output, DB, verbose)\n",
     "\n",
+    "                    R.generate_cdxml_files(RP=None, ranktype=None, fba_fluxes=opt_fba.fbasol.fluxes, show_rxn_info=show_rxn_info)\n",
+    "                    \n",
     "                    if figures_graphviz:\n",
     "\n",
-    "                        G = spgd.GraphDot(DB, output_path, incpds_active, inrxns_active,\n",
-    "                                        temp_imgs_PATH, opt_fba.fbasol.fluxes)\n",
+    "                        G = spgd.GraphDot(DB, args.output_path, incpds_active, inrxns_active,\n",
+    "                                          temp_imgs_PATH, opt_fba.fbasol.fluxes)\n",
     "                        G.sc_graph(target_info[0], target_info[2], ex_info.temp_rxns, _images)\n",
     "\n",
-    "                    if figures_chemdraw:\n",
+    "                elif not flux_balance_analysis:\n",
+    "                    R.generate_cdxml_files()\n",
     "\n",
-    "                        R.generate_cdxml_files(RP=SP, ranktype=ranktype, fba_fluxes=opt_fba.fbasol.fluxes, show_rxn_info=show_rxn_info)\n",
-    "\n",
-    "                elif (figures_graphviz or figures_chemdraw) and not flux_balance_analysis:\n",
-    "\n",
-    "                    if figures_graphviz:\n",
-    "\n",
+    "                    if args.figures_graphviz:\n",
     "                        G = spgd.GraphDot(DB, output_path, incpds_active, inrxns_active, temp_imgs_PATH)\n",
     "                        G.sc_graph(target_info[0], target_info[2], ex_info.temp_rxns, _images)\n",
     "\n",
-    "                    if figures_chemdraw:\n",
-    "\n",
-    "                        R.generate_cdxml_files(RP=SP, ranktype=ranktype, show_rxn_info=show_rxn_info)\n",
-    "                        \n",
-    "                if gene_compatibility:\n",
-    "                    verbose_print(args.verbose, 'STATUS:\\tOptimizing gene sequences for optimal pathway reaction enzymes...')\n",
-    "                    enzymes = list(R.enzyme_set)\n",
-    "                    if len(enzymes) != 0:\n",
-    "                        output.generate_gc_directory()\n",
-    "                        for enzyme in enzymes:\n",
-    "                            verbose_print(args.verbose,'\\nSTATUS:\\tOptimizing gene compatibility for EC: %s' % enzyme)\n",
-    "                            gc(database,enzyme,target_org=target_info[2],output_directory=output.GC_output_path,\n",
-    "                                cai_optimal_threshold=cai_optimal_threshold, default_db='%s.db' % DEFAULT_DB_NAME,\n",
-    "                                user_cai_table=user_cai_table)\n",
     "\n",
     "            else:\n",
     "\n",
