update  ../docs/rsgc_jupyter.ipynb

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "#Load Parameters for RetSynth Run \n",
-    "targets_path=\"/home/leann/sandia_work/test.txt\"\n",
+    "targets_path=\"testtargets.txt\"\n",
     "output_path=\"testjupyter/\"\n",
     "output_html=True\n",
     "output_xlsx_format=False\n",
@@ -132,8 +132,8 @@
     "#database parameters\n",
     "generate_database=False\n",
     "generate_database_constraints=False\n",
-    "database=\"/home/leann/sandia_work/DevelopedDatabases/PATRICrhodoONLY_mc_inchi.db\"\n",
-    "database_constraints=\"/home/leann/sandia_work/DevelopedDatabases/PATRICrhodoONLY_mc_inchi.constraints\"\n",
+    "database=False\n",
+    "database_constraints=False\n",
     "inchidb=True\n",
     "\n",
     "#database construction parameters\n",
