update parameters in rs_gcjuypyter notebook

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -183,10 +183,6 @@
     "show_rxn_info=False\n",
     "images=True\n",
     "timer_output=False\n",
-    "rankingpathways_seperation_file=None\n",
-    "rankpathways_boilingpoint=False\n",
-    "rankpathways_logP=False\n",
-    "rankpathways_logP_solvent=\"water\"\n",
     "\n",
     "##Gene compatibility parameters\n",
     "gene_compatability=True\n",
@@ -346,9 +342,6 @@
     "                        without finding all multiple_solutions')\n",
     "        if not targets_path:\n",
     "            raise ValueError('Requires an input file of target compounds')\n",
-    "        \n",
-    "        if not rankingpathways_seperation_file and (rankpathways_boilingpoint or rankpathways_logP):\n",
-    "            raise ValueError('Requires an boiling point input file for database')\n",
     "#Run check\n",
     "check_arguments()"
    ]
@@ -621,26 +614,9 @@
     "\n",
     "    LPchem=None\n",
     "\n",
-    "    if rankpathways_boilingpoint or rankpathways_logP:\n",
-    "        print ('STATUS: Load necessary chemical constraints for ranking pathways based on boiling point')\n",
-    "\n",
-    "        constraint_file = re.sub('.db$', '_chem.constraints', database)\n",
-    "        allrxns_chem = DB.get_reactions_based_on_type('chem')\n",
-    "\n",
-    "        if not  os.path.isfile(constraint_file):\n",
-    "            LPchem = co.ConstructInitialLP(allrxns_chem, allcpds, DB, [], [])\n",
-    "            store_constraint_file(constraint_file, LPchem)         \n",
-    "\n",
-    "        else:\n",
-    "            (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = unload_constraint_file(constraint_file)  \n",
-    "\n",
-    "            LPchem = co.ConstructInitialLP(allrxns, allcompounds4matrix, DB,\n",
-    "                                            [], [], lp, variables, allrxnsrev_dict_rev,\n",
-    "                                            allrxnsrev_dict, allrxnsrev)\n",
-    "\n",
     "    return LP, LPchem\n",
     "\n",
-    "def construct_and_run_integerprogram(targets, output, database, rankingfile=None):\n",
+    "def construct_and_run_integerprogram(targets, output, database):\n",
     "    '''\n",
     "    Constructs ILP and solves it identifying shortest path to the target\n",
     "    '''\n",
@@ -657,20 +633,13 @@
     "        IP = ip_pulp.IntergerProgram(DB, limit_reactions,\n",
     "                                    limit_cycles, k_number_of_paths,\n",
     "                                    cycles, verbose, solver_time_limit, timer_output)\n",
-    "    if rankpathways_boilingpoint or rankpathways_logP:\n",
     "\n",
-    "        CRV = rp.ConstructRankingVariables(database, rankingfile, verbose)\n",
-    "\n",
-    "        return (IP, CRV)\n",
-    "\n",
-    "    else: \n",
-    "\n",
-    "        return (IP, None)\n",
+    "    return IP\n",
     "\n",
     "#Run functions\n",
     "targets, ignore_reactions, include_rxns, output, temp_imgs_PATH = read_in_and_generate_output_files(database, targets_path)\n",
     "LP, LPchem = retrieve_constraints(all_db_reactions, all_db_compounds, ignore_reactions, include_rxns, database)\n",
-    "IP, CRV = construct_and_run_integerprogram(targets, output, database, rankingfile=rankingpathways_seperation_file)\n"
+    "IP = construct_and_run_integerprogram(targets, output, database)\n"
    ]
   },
   {
@@ -856,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
