update jupyter notebook

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -775,7 +775,7 @@
     "\n",
     "if output_html:\n",
     "    print(\"STATUS: writing html file\")\n",
-    "    gh.HtmlOutput(len(targets), output_path, flux_balance_analysis, figures_graphviz, output_path+\"/Results.html\")\n",
+    "    gh.HtmlOutput(len(targets), output_path, flux_balance_analysis, figures_graphviz, database, output_path+\"/Results.html\")\n",
     "\n",
     "'''Remove all temporary images'''\n",
     "shutil.rmtree(temp_imgs_PATH)\n",
