update jupyter notebook

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -239,6 +239,16 @@
     "    else:\n",
     "        return True\n",
     "\n",
+    "def targets_missing(targets,database):\n",
+    "    '''Check if targets are missing from the database'''\n",
+    "    DB = Q.Connector(database)\n",
+    "    all_compounds = DB.get_all_compounds()\n",
+    "\n",
+    "    for t in targets:\n",
+    "        if t[0] not in all_compounds:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
     "def run_flux_balance_analysis(target_info, ex_info, incpds_active,\n",
     "                              inrxns, media, ko,\n",
     "                              output, DB, RP, verbose):\n",
@@ -485,21 +495,32 @@
     "    DB = Q.Connector(database)\n",
     "    R = rt.Readfile(targets_path, DB, inchidb)\n",
     "    if not R.targets:\n",
-    "        raise ValueError('ERROR: No targets, try different compounds')\n",
+    "        raise ValueError('ERROR:\\tNo targets, try different compounds')\n",
+    "    try:\n",
+    "        verbose_print(verbose, \"STATUS: generating output folder \"+output_path)\n",
+    "        os.mkdir(output_path)\n",
+    "    except:\n",
+    "        verbose_print(verbose, \"STATUS: output folder already exists \"+output_path)\n",
+    "        pass\n",
+    "    DB_missing_targets = targets_missing(R.targets, database)\n",
+    "    if DB_missing_targets:\n",
+    "        run_tanimoto_threshold = True\n",
+    "        verbose_print(verbose, 'STATUS:\\tTarget not found in database. Trying to find structurally similar compounds')\n",
     "    temp_imgs_PATH = get_new_temp_imgs_folder(output_path, 0)\n",
-    "    OUTPUT = go.Output(DB, output_path, verbose, rankpathways_boilingpoint, flux_balance_analysis, knockouts, timer_output)\n",
+    "    OUTPUT = go.Output(DB, output_path, verbose, flux_balance_analysis, knockouts, timer_output, GC=gene_compatability)\n",
     "    if run_tanimoto_threshold:\n",
-    "        verbose_print(verbose, 'STATUS: {} tanimoto threshold being used'.format(float(tanimoto_threshold)*100))\n",
+    "        verbose_print(verbose, 'STATUS:\\t{} tanimoto threshold being used'.format(float(tanimoto_threshold)*100))\n",
     "        cytosol_compartmentID = get_compartmentID_from_db(DB, 'cytosol')\n",
     "        extracell_compartmentID = get_compartmentID_from_db(DB, 'extracellular')\n",
     "        SIM = ss.TanimotoStructureSimilarity(R.targets, DB.get_all_compounds(),\n",
-    "                                            cytosol_compartmentID, extracell_compartmentID,\n",
-    "                                            verbose, tanimoto_threshold)\n",
+    "                                             cytosol_compartmentID, extracell_compartmentID,\n",
+    "                                             verbose, tanimoto_threshold)\n",
     "        OUTPUT.output_final_targets(SIM.finaltargets, tanimoto_threshold)\n",
-    "        return(SIM.finaltargets, R.ignorerxns, R.includerxns, OUTPUT, temp_imgs_PATH)\n",
-    "\n",
-    "    else:\n",
-    "        return(R.targets, R.ignorerxns, R.includerxns, OUTPUT, temp_imgs_PATH)\n",
+    "        if DB_missing_targets and len(SIM.finaltargets) == 1:\n",
+    "            verbose_print(verbose, 'STATUS:\\tNo structurally similar compounds available with threshold %.2f' % tanimoto_threshold)\n",
+    "            return ([], R.ignorerxns, OUTPUT, temp_imgs_PATH)\n",
+    "        else:\n",
+    "          return(SIM.finaltargets, R.ignorerxns, OUTPUT, temp_imgs_PATH)\n",
     "\n",
     "def retrieve_constraints(allrxns, allcpds, ignore_reactions, include_rxns, database):\n",
     "    '''\n",
@@ -706,7 +727,7 @@
     "                ex_info = ei.Extract_Information(optimal_pathways, incpds_active, inrxns_active, DB)\n",
     "                output.output_shortest_paths(target_info, ex_info.temp_rxns)\n",
     "\n",
-    "                R = rf.ReactionFiles(args.output_path, DB, ex_info.temp_rxns,\n",
+    "                R = rf.ReactionFiles(output_path, DB, ex_info.temp_rxns,\n",
     "                                 target_info[0], target_info[2], incpds_active)\n",
     "\n",
     "                output.output_raw_solutions(target_info[0], target_info[2], R.ordered_paths,\n",
@@ -715,21 +736,21 @@
     "                if flux_balance_analysis:\n",
     "                    opt_fba = run_flux_balance_analysis(target_info, ex_info,\n",
     "                                                        incpds_active, inrxns_active,\n",
-    "                                                        args.media_for_FBA, knockouts,\n",
+    "                                                        media_for_FBA, knockouts,\n",
     "                                                        output, DB, verbose)\n",
     "\n",
     "                    R.generate_cdxml_files(RP=None, ranktype=None, fba_fluxes=opt_fba.fbasol.fluxes, show_rxn_info=show_rxn_info)\n",
     "                    \n",
     "                    if figures_graphviz:\n",
     "\n",
-    "                        G = spgd.GraphDot(DB, args.output_path, incpds_active, inrxns_active,\n",
+    "                        G = spgd.GraphDot(DB, output_path, incpds_active, inrxns_active,\n",
     "                                          temp_imgs_PATH, opt_fba.fbasol.fluxes)\n",
     "                        G.sc_graph(target_info[0], target_info[2], ex_info.temp_rxns, _images)\n",
     "\n",
     "                elif not flux_balance_analysis:\n",
     "                    R.generate_cdxml_files()\n",
     "\n",
-    "                    if args.figures_graphviz:\n",
+    "                    if figures_graphviz:\n",
     "                        G = spgd.GraphDot(DB, output_path, incpds_active, inrxns_active, temp_imgs_PATH)\n",
     "                        G.sc_graph(target_info[0], target_info[2], ex_info.temp_rxns, _images)\n",
     "\n",
