update import of pickle library in rs_gc.py

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -754,7 +754,18 @@
     "                        G = spgd.GraphDot(DB, output_path, incpds_active, inrxns_active, temp_imgs_PATH)\n",
     "                        G.sc_graph(target_info[0], target_info[2], ex_info.temp_rxns, _images)\n",
     "\n",
-    "\n",
+    "                if gene_compatability:\n",
+    "                    verbose_print(verbose, 'STATUS:\\tOptimizing gene sequences for optimal pathway reaction enzymes...')\n",
+    "                    enzymes = list(R.enzyme_set)\n",
+    "                    if len(enzymes) != 0:\n",
+    "                        output.generate_gc_directory()\n",
+    "                        for enzyme in enzymes:\n",
+    "                            verbose_print(args.verbose,'\\nSTATUS:\\tOptimizing gene compatibility for EC: %s' % enzyme)\n",
+    "                            gc(database,enzyme,target_org=target_info[2],output_directory=output.GC_output_path,\n",
+    "                                cai_optimal_threshold=cai_threshold, default_db='%s.db' % DEFAULT_DB_NAME,\n",
+    "                                user_cai_table=user_cai_table)\n",
+    "                    else:\n",
+    "                        verbose_print(verbose, 'STATUS:')\n",
     "            else:\n",
     "\n",
     "                output.output_shortest_paths(target_info, [])\n",
