update rsgc_jupyter notebox to deal with gene compatability new layout

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -100,7 +100,8 @@
     "from rsgc.FBA import compare_results as cr\n",
     "from rsgc.FBA import retrieve_producable_mets as rpm\n",
     "from rsgc.FBA import compareKO_results as crko\n",
-    "from rsgc.GeneCompatibility.gc import gc_main as gc"
+    "from rsgc.GeneCompatibility.gc import gc_main as gc\n",
+    "from rsgc.GeneCompatibility.gc import gc_enzyme as gce"
    ]
   },
   {
@@ -521,8 +522,10 @@
     "            return ([], R.ignorerxns, OUTPUT, temp_imgs_PATH)\n",
     "        else:\n",
     "          return(SIM.finaltargets, R.ignorerxns, OUTPUT, temp_imgs_PATH)\n",
+    "    else:\n",
+    "        return(R.targets, R.ignorerxns, OUTPUT, temp_imgs_PATH)\n",
     "\n",
-    "def retrieve_constraints(allrxns, allcpds, ignore_reactions, include_rxns, database):\n",
+    "def retrieve_constraints(allrxns, allcpds, ignore_reactions, database):\n",
     "    '''\n",
     "    Generates database constraints or uses previously generated\n",
     "    database constraints (.constraints) file\n",
@@ -531,111 +534,106 @@
     "\n",
     "    def store_constraint_file(filename, LP):\n",
     "        '''store generated constraints into .constraints'''\n",
-    "\n",
-    "        print ('STATUS: Dumping newly generated variables...')\n",
+    "        \n",
+    "        print ('STATUS:\\tDumping newly generated variables...')\n",
     "\n",
     "        with open(filename, 'wb') as fout1:\n",
+    "            \n",
+    "            print ('STATUS:\\tDumping LP structure...')\n",
+    "            pickle.dump(LP.lp, fout1)\n",
+    "            \n",
+    "            print ('STATUS:\\tDumping all compounds...')\n",
+    "            pickle.dump(LP.allcpds, fout1)\n",
     "\n",
-    "            print ('STATUS: Dumping LP structure...')\n",
-    "            cPickle.dump(LP.lp, fout1)\n",
+    "            print ('STATUS:\\tDumping all reaction variables...')\n",
+    "            pickle.dump(LP.variables, fout1)\n",
     "\n",
-    "            print ('STATUS: Dumping all compounds...')\n",
-    "            cPickle.dump(LP.allcpds, fout1)\n",
+    "            print ('STATUS:\\tDumping all reactions 1...')\n",
+    "            pickle.dump(LP.allrxnsrev_dict_rev, fout1)\n",
+    "  \n",
+    "            print ('STATUS:\\tDumping all reactions 2...')\n",
+    "            pickle.dump(LP.allrxnsrev_dict, fout1)\n",
     "\n",
-    "            print ('STATUS: Dumping all reaction variables...')\n",
-    "            cPickle.dump(LP.variables, fout1)\n",
-    "\n",
-    "            print ('STATUS: Dumping all reactions 1...')\n",
-    "            cPickle.dump(LP.allrxnsrev_dict_rev, fout1)\n",
-    "\n",
-    "            print ('STATUS: Dumping all reactions 2...')\n",
-    "            cPickle.dump(LP.allrxnsrev_dict, fout1)\n",
-    "\n",
-    "            print ('STATUS: Dumping all reactions 3...')\n",
-    "            cPickle.dump(LP.allrxnsrev, fout1)\n",
+    "            print ('STATUS:\\tDumping all reactions 3...')\n",
+    "            pickle.dump(LP.allrxnsrev, fout1)\n",
     "\n",
     "    def unload_constraint_file(filename):\n",
     "        '''unload constraints from a .constraints'''\n",
     "\n",
-    "        print ('STATUS: Loading pre-stored variables...')\n",
+    "        print ('STATUS:\\tLoading pre-stored variables...')\n",
     "\n",
     "        with open(filename, 'rb') as fin1:\n",
+    "            \n",
+    "            print ('STATUS:\\tLoading LP structure...')\n",
+    "            lp = pickle.load(fin1)\n",
     "\n",
-    "            print ('STATUS: Loading LP structure...')\n",
-    "            lp = cPickle.load(fin1)\n",
+    "            print ('STATUS:\\tLoading all compounds...')\n",
+    "            allcompounds4matrix = pickle.load(fin1)\n",
     "\n",
-    "            print ('STATUS: Loading all compounds...')\n",
-    "            allcompounds4matrix = cPickle.load(fin1)\n",
+    "            print ('STATUS:\\tLoading all reaction variables...')\n",
+    "            variables = pickle.load(fin1)\n",
     "\n",
-    "            print ('STATUS: Loading all reaction variables...')\n",
-    "            variables = cPickle.load(fin1)\n",
+    "            print ('STATUS:\\tLoading all reactions 1...')\n",
+    "            allrxnsrev_dict_rev = pickle.load(fin1)\n",
     "\n",
-    "            print ('STATUS: Loading all reactions 1...')\n",
-    "            allrxnsrev_dict_rev = cPickle.load(fin1)\n",
+    "            print ('STATUS:\\tLoading all reactions 2...')\n",
+    "            allrxnsrev_dict = pickle.load(fin1)\n",
     "\n",
-    "            print ('STATUS: Loading all reactions 2...')\n",
-    "            allrxnsrev_dict = cPickle.load(fin1)\n",
-    "\n",
-    "            print ('STATUS: Loading all reactions 3...')\n",
-    "            allrxnsrev = cPickle.load(fin1)\n",
+    "            print ('STATUS:\\tLoading all reactions 3...')\n",
+    "            allrxnsrev = pickle.load(fin1)\n",
     "\n",
     "        return (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev)\n",
     "\n",
     "    def load_preconstructed_constraint_files(media, mediatype, args):\n",
     "        '''load defualt .constraint files'''\n",
     "\n",
-    "        print ('WARNING: No database constraint file specified using pre constructed database constraint file for database with media {}'.format(media_for_FBA))\n",
-    "        if evaluate_reactions == 'all':\n",
+    "        print ('WARNING:\\tNo database constraint file specified using pre constructed database constraint file for database')\n",
+    "        if evaluate_reactions =='all':\n",
     "\n",
-    "            (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = unload_constraint_file(PATH+'/ConstructedDatabases/DBINCHIECOLIDH1_{}_MC_cas_SPRESI_reduced1x.constraints'.format(mediatype))\n",
-    "\n",
+    "            (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = unload_constraint_file(PATH+'/ConstructedDatabases/' + DEFAULT_DB_NAME + '.constraints')\n",
+    "            \n",
     "            return (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev)\n",
-    "\n",
-    "        elif  evaluate_reactions == 'bio':\n",
-    "\n",
-    "            (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = unload_constraint_file(PATH+'/ConstructedDatabases/DBINCHIECOLIDH1_{}_MC_cas_SPRESI_reduced1x_bio.constraints'.format(mediatype))\n",
-    "\n",
-    "            return (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev)            \n",
     "\n",
     "        elif evaluate_reactions =='chem':\n",
     "\n",
-    "            (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = unload_constraint_file(PATH+'/ConstructedDatabases/DBINCHIECOLIDH1_{}_MC_cas_SPRESI_reduced1x_chem.constraints'.format(mediatype))\n",
+    "            (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = unload_constraint_file(PATH+'/ConstructedDatabases/' + DEFAULT_DB_NAME + '_chem.constraints')\n",
+    "            \n",
+    "            return (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev)  \n",
     "\n",
+    "        elif evaluate_reactions =='bio':\n",
     "\n",
+    "            (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = unload_constraint_file(PATH+'/ConstructedDatabases/' + DEFAULT_DB_NAME + '_bio.constraints')\n",
+    "            \n",
     "            return (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev)  \n",
     "\n",
     "\n",
     "\n",
     "    ###RETRIEVE SPECIFIED BY USER CONSTRAINTS###\n",
     "    if generate_database_constraints:\n",
-    "        LP = co.ConstructInitialLP(allrxns, allcpds, DB, ignore_reactions, include_rxns)\n",
+    "        LP = co.ConstructInitialLP(allrxns, allcpds, DB, ignore_reactions)\n",
     "        store_constraint_file(generate_database_constraints, LP)\n",
     "\n",
     "    elif database_constraints:\n",
     "        (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = unload_constraint_file(database_constraints) \n",
     "        LP = co.ConstructInitialLP(allrxns, allcompounds4matrix, DB,\n",
-    "                                ignore_reactions, include_rxns,\n",
-    "                                lp, variables, allrxnsrev_dict_rev,\n",
-    "                                allrxnsrev_dict, allrxnsrev)\n",
+    "                                   ignore_reactions, lp, variables, allrxnsrev_dict_rev,\n",
+    "                                   allrxnsrev_dict, allrxnsrev)\n",
     "    else:\n",
     "        if media_for_FBA=='Carbon-D-Glucose':\n",
-    "\n",
+    "            \n",
     "            (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = load_preconstructed_constraint_files(media_for_FBA, 'GL', args)\n",
-    "\n",
+    "        \n",
     "        elif media_for_FBA=='Complete':\n",
-    "\n",
+    "            \n",
     "            (lp, allcompounds4matrix, variables, allrxnsrev_dict_rev, allrxnsrev_dict, allrxnsrev) = load_preconstructed_constraint_files(media_for_FBA, 'CP', args)\n",
-    "\n",
+    "        \n",
     "            LP = co.ConstructInitialLP(allrxns, allcompounds4matrix, DB,\n",
-    "                                    ignore_reactions, include_rxns,\n",
-    "                                    lp, variables, allrxnsrev_dict_rev,\n",
-    "                                    allrxnsrev_dict, allrxnsrev)\n",
+    "                                       ignore_reactions, lp, variables, allrxnsrev_dict_rev,\n",
+    "                                       allrxnsrev_dict, allrxnsrev)\n",
     "        else: \n",
-    "            print ('ERROR: No identified pre constraint file...stopping run')\n",
+    "            print ('ERROR:\\tNo identified pre constraint file...stopping run')\n",
     "\n",
-    "    LPchem=None\n",
-    "\n",
-    "    return LP, LPchem\n",
+    "    return LP\n",
     "\n",
     "def construct_and_run_integerprogram(targets, output, database):\n",
     "    '''\n",
@@ -659,7 +657,7 @@
     "\n",
     "#Run functions\n",
     "targets, ignore_reactions, include_rxns, output, temp_imgs_PATH = read_in_and_generate_output_files(database, targets_path)\n",
-    "LP, LPchem = retrieve_constraints(all_db_reactions, all_db_compounds, ignore_reactions, include_rxns, database)\n",
+    "LP = retrieve_constraints(all_db_reactions, all_db_compounds, ignore_reactions, include_rxns, database)\n",
     "IP = construct_and_run_integerprogram(targets, output, database)\n"
    ]
   },
@@ -677,7 +675,10 @@
    "outputs": [],
    "source": [
     "#find pathway for targets \n",
-    "def retrieve_shortestpath(target_info, IP, LP, LPchem, database, output, temp_imgs_PATH, CRV, timer_output, media_for_FBA, flux_balance_analysis, knockouts, images, figures_graphviz, figures_chemdraw, evaluate_reactions, rankpathways_logP_solvent, rankpathways_logP, rankpathways_boilingpoint, show_rxn_info, output_path, multiple_solutions, start_compounds, verbose):\n",
+    "def retrieve_shortestpath(target_info, IP, LP, database, output, temp_imgs_PATH, timer_output, media_for_FBA, \n",
+    "                          flux_balance_analysis, knockouts, images, figures_graphviz, figures_chemdraw, evaluate_reactions,\n",
+    "                          show_rxn_info, output_path, multiple_solutions, start_compounds, gene_compatability,\n",
+    "                          orgs_gbs, gbs_orgs, RGC, keggorganisms_ids, output_genecompdb, verbose):\n",
     "    '''Retrieve the shortest path for target organism'''\n",
     "\n",
     "    start = timer()\n",
@@ -760,19 +761,20 @@
     "                    if len(enzymes) != 0:\n",
     "                        output.generate_gc_directory()\n",
     "                        for enzyme in enzymes:\n",
-    "                            verbose_print(args.verbose,'\\nSTATUS:\\tOptimizing gene compatibility for EC: %s' % enzyme)\n",
-    "                            gc(database,enzyme,target_org=target_info[2],output_directory=output.GC_output_path,\n",
-    "                                cai_optimal_threshold=cai_threshold, default_db='%s.db' % DEFAULT_DB_NAME,\n",
-    "                                user_cai_table=user_cai_table)\n",
+    "                            if os.path.isfile(os.path.join(output.GC_output_path, \"geneseqs_{}_{}.txt\".format(enzyme, target_info[2]))):\n",
+    "                                print (\"STATUS: already have sequence information for {} in {}\".format(enzyme, target_info[2]))\n",
+    "                            else:\n",
+    "                                gce(enzyme, orgs_gbs, gbs_orgs, target_info[2], RGC, keggorganisms_ids, output_genecompdb,\n",
+    "                                    output_directory=output.GC_output_path, user_cai_table=user_cai_table,\n",
+    "                                    cai_optimal_threshold=cai_threshold)\n",
     "                    else:\n",
     "                        verbose_print(verbose, 'STATUS:')\n",
+    "\n",
     "            else:\n",
-    "\n",
     "                output.output_shortest_paths(target_info, [])\n",
-    "\n",
-    "\n",
     "                if flux_balance_analysis:\n",
-    "                    verbose_print(verbose, 'WARNING: No optimal path for %s in species %s therefore no flux balance will be performed' % (target_info[0], target_info[2]))\n",
+    "                    verbose_print(verbose, 'WARNING:\\tNo optimal path for %s in species %s therefore no flux balance will be performed' % (target_info[0], target_info[2]))\n",
+    "    end = timer()\n",
     "    end = timer()\n",
     "\n",
     "    if timer_output:\n",
@@ -783,18 +785,28 @@
     "\n",
     "\n",
     "##Run retrieve_shortestpath\n",
+    "if gene_compatability:\n",
+    "    orgs_gbs, gbs_orgs, R, keggorganisms_ids, output_genecompdb = gc(database, \n",
+    "                                                                     output_directory=output_path,\n",
+    "                                                                     default_db='')\n",
+    "else:\n",
+    "    orgs_gbs=False\n",
+    "    gbs_orgs=False\n",
+    "    R=False\n",
+    "    keggorganisms_ids=False\n",
+    "    output_genecompdb=False\n",
+    "\n",
     "args_targets = [targets[i:i+processors]\n",
     "              for i in range(0, len(targets), processors)]\n",
     "for targets in args_targets:\n",
     "    processes = []\n",
     "    for target in targets:\n",
-    "        processes.append(Process(target=retrieve_shortestpath, args=(target, IP, LP, LPchem, database, output,\n",
-    "                                                    temp_imgs_PATH, CRV, timer_output, media_for_FBA,\n",
+    "        processes.append(Process(target=retrieve_shortestpath, args=(target, IP, LP, database, output,\n",
+    "                                                    temp_imgs_PATH, timer_output, media_for_FBA,\n",
     "                                                    flux_balance_analysis, knockouts, images,\n",
-    "                                                    figures_graphviz, figures_chemdraw, evaluate_reactions,\n",
-    "                                                    rankpathways_logP_solvent, rankpathways_logP,\n",
-    "                                                    rankpathways_boilingpoint, show_rxn_info,\n",
-    "                                                    output_path, multiple_solutions, start_compounds,\n",
+    "                                                    figures_graphviz, figures_chemdraw, evaluate_reactions, show_rxn_info,\n",
+    "                                                    output_path, multiple_solutions, start_compounds, gene_compatability,\n",
+    "                                                    orgs_gbs, gbs_orgs, R, keggorganisms_ids, output_genecompdb,\n",
     "                                                    verbose)))\n",
     "\n",
     "    for p in processes:        \n",
